--- a/trans-cloud/trans-monitor-service/pom.xml
+++ b/trans-cloud/trans-monitor-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>trans-system-server</artifactId>
+    <artifactId>trans-monitor-service</artifactId>
 
 
 </project>
