--- a/trans-cloud/trans-query-service/pom.xml
+++ b/trans-cloud/trans-query-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>trans-query-server</artifactId>
+    <artifactId>trans-query-service</artifactId>
 
 
 </project>
